feat(community-transport): implement Native TCP connection and transport provider with locality-aware scheduling