@@ -329,6 +329,11 @@ Goal:
    - first run: `c1=5,288,204.318 ops/s`; `c2=7,972,533.573 ops/s`; delta `+50.760695%`
    - stabilized run (`-f 2 -wi 5 -i 8`): `c1=6,892,375.103 ops/s`; `c2=9,802,019.755 ops/s`; delta `+42.22%`
 - interpretation: C2 strong improvement (not parity)
+- latest 3-way JMH run (C1/C2/C4):
+   - first pass (`-f 1 -wi 3 -i 5`): `c1=5,473,621.321 ops/s`; `c2=10,142,104.062 ops/s`; `c4=5,222,186.951 ops/s`
+   - stabilized pass (`-f 2 -wi 5 -i 8`): `c1=5,005,350.201 ops/s`; `c2=10,618,142.228 ops/s`; `c4=5,880,428.830 ops/s`
+- stabilized deltas vs C1: `c2=+112.14%`; `c4=+17.48%`
+- winner: `c2CustomInlineBackend` (throughput)
 
 ### Phase C3 — Experimental backend
 
@@ -344,6 +349,9 @@ Goal:
 - contract layer implemented via PAQS seam TCK in core and community
 - `CorePaqsSchedulerTckTest` passes (9 tests)
 - `CommunityPaqsExecutionBackendContractTest` passes (1 test)
+- `LocalityAwareExecutionBackend` implemented in `eu.exeris.kernel.community.transport` — pins VT continuations to a per-carrier `ForkJoinPool` via `Thread.ofVirtual().scheduler(pool)` (reflective probe; falls back to default VT scheduler if API not accessible on the active JDK)
+- `NativeTcpCarrier` extended with locality-aware constructor: `NativeTcpCarrier(..., int localityPoolParallelism)` — creates and owns a dedicated `ForkJoinPool`, wired into `initPaqs()` via the 6-arg `PaqsScheduler` constructor; production default path (5-arg constructor) unchanged
+- JMH benchmark variant `c4LocalityAwareVirtualThreadBackend()` executed in 3-way run; stabilized throughput `5,880,428.830 ops/s` (`+17.48%` vs C1)
 
 ### Phase C4 — Fixed-rate efficiency study
 
@@ -351,6 +359,48 @@ Run scenarios at:
 - sub-maximal fixed rate,
 - moderate fixed rate,
 - maximum throughput.
+
+#### Status (2026-03-22)
+
+- runnable benchmark harness added: `CommunityTransportFixedRateBenchmark`
+- location: `exeris-kernel-community/src/test/java/eu/exeris/kernel/community/transport/CommunityTransportFixedRateBenchmark.java`
+- scenario params: `h1-plaintext-fixed-rate`, `h1-json-1kb-fixed-rate`, `h2-plaintext-fixed-rate`, `h2-json-1kb-fixed-rate`
+- backend params: `default-vt`, `locality-aware`
+- load params: `sub-max`, `moderate`, `max-throughput`
+- status: harness compiled (`mvn -pl exeris-kernel-community -am test-compile -DskipTests`)
+- run note: JMH benchmark discovery in Community requires Maven profile 'benchmarks' (enables jmh annotation processor)
+- next run task: execute matrix and collect throughput + latency percentiles + CPU migration/cache counters
+- mini-matrix executed for `scenario=h1-plaintext-fixed-rate` across `sub-max`, `moderate`, `max-throughput` and backends `default-vt` vs `locality-aware`
+- measured throughput (`ops/s`, `-f 1 -wi 1 -i 3`):
+   - `sub-max`: `default-vt=22,181.399`; `locality-aware=22,113.582`; delta `-0.31%`
+   - `moderate`: `default-vt=232,388.983`; `locality-aware=249,947.287`; delta `+7.56%`
+   - `max-throughput`: `default-vt=252,923.042`; `locality-aware=224,111.831`; delta `-11.39%`
+- interpretation: signal is mixed and confidence is low due large error bars; requires longer runs (`-f>=2`, more iterations) before architectural conclusion
+
+## Phase C4: Final Conclusion
+
+**Measurement Campaign**: 6-cell stabilized matrix (h1-plaintext-fixed-rate, 2 backends, 3 load profiles, -f 2 -wi 5 -i 8).
+
+**Results Summary**:
+- sub-max: -4.89% (default-vt faster), +-4.6%-7.7% error bands (clean signal)
+- moderate: -3.35% (default-vt faster), +-21% error bands (noise-dominated)
+- max-throughput: +3.24% (locality-aware faster), +-21% error bands (noise-dominated)
+
+**Signal Classification**: Inconclusive. Deltas are marginal (<5%) and full-variance, within pooled measurement uncertainty.
+
+**Mechanism Hypothesis** (to validate in C5):
+- Continuation-locality affinity bookkeeping adds per-task overhead under paced fixed-rate loads (explaining -4.89% sub-max deficit).
+- Unpaced workloads show weak marginal gain (+3.24%), indicating affinity amortizes in contention-dominated regimes, but signal is too noisy to claim architectural win.
+
+**Architectural Interpretation**:
+Locality-aware scheduling (C4) is optional exploratory, not a default contract lever. The default Virtual Thread scheduler remains superior for transactional fixed-rate patterns. Affinity gains are contingent on workload-intensive asynchronous patterns (C5 scope: event-loop prototyping).
+
+**C5 Recommendation**: Conditional Go (medium confidence ~0.68). Proceed to Enterprise event-loop prototype if:
+1. Isolated reruns reduce error bands to +-5-8% and separate noise from repeatable signal.
+2. JFR profiling validates mechanism (e.g., fewer carrier migrations, lower park/unpark overhead).
+3. Prototype demonstrates >=8% throughput or clear p95/p99 latency gain with <2-3% paced-load regression.
+
+**Links to Subsystem/ADR Updates** (see below).
 
 ### Phase C5 — Optional exploratory VT event-loop prototype
 
@@ -407,12 +457,63 @@ and locality penalties are often clearer below saturation than at full throughpu
 - DRAM-related counters where available
 - JFR scheduler events
 
-## Latest Run Commands (2026-03-22)
+## Latest Run Commands (Stabilized C4 Matrix - March 22, 2026)
 
-- `mvn -pl exeris-kernel-core -DskipTests clean package`
-- `java --enable-preview -cp "exeris-kernel-core/target/test-classes:exeris-kernel-core/target/classes:$(cat exeris-kernel-core/target/test-classpath.txt)" org.openjdk.jmh.Main CoreContinuationLocalityBaseline -f 2 -wi 5 -i 8 -tu s`
-- `mvn -pl exeris-kernel-core -Dtest=CorePaqsSchedulerTckTest test -DfailIfNoTests=false`
-- `mvn -pl exeris-kernel-community -Dtest=CommunityPaqsExecutionBackendContractTest test -DfailIfNoTests=false`
+Build & Setup:
+```sh
+mvn -pl exeris-kernel-community -P benchmarks -am clean test-compile -DskipTests
+mvn -pl exeris-kernel-community -P benchmarks -am dependency:build-classpath -Dmdep.outputFile=/tmp/exeris-community-jmh-cp.txt
+```
+
+6 Stabilized Runs (each `-f 2 -wi 5 -i 8`):
+```sh
+# sub-max, default-vt
+java --enable-preview -cp "$(cat /tmp/exeris-community-jmh-cp.txt):exeris-kernel-community/target/test-classes" \
+   -XX:+UnlockExperimentalVMOptions -XX:+UseZGC -XX:ZCollectionInterval=0 \
+   org.openjdk.jmh.Main eu.exeris.kernel.community.transport.CommunityTransportFixedRateBenchmark.fixedRateStreamWrite \
+   -p scenario=h1-plaintext-fixed-rate -p backendMode=default-vt -p loadProfile=sub-max \
+   -f 2 -wi 5 -i 8 -tu s
+
+# sub-max, locality-aware
+java --enable-preview -cp "$(cat /tmp/exeris-community-jmh-cp.txt):exeris-kernel-community/target/test-classes" \
+   -XX:+UnlockExperimentalVMOptions -XX:+UseZGC -XX:ZCollectionInterval=0 \
+   org.openjdk.jmh.Main eu.exeris.kernel.community.transport.CommunityTransportFixedRateBenchmark.fixedRateStreamWrite \
+   -p scenario=h1-plaintext-fixed-rate -p backendMode=locality-aware -p loadProfile=sub-max \
+   -f 2 -wi 5 -i 8 -tu s
+
+# moderate, default-vt
+java --enable-preview -cp "$(cat /tmp/exeris-community-jmh-cp.txt):exeris-kernel-community/target/test-classes" \
+   -XX:+UnlockExperimentalVMOptions -XX:+UseZGC -XX:ZCollectionInterval=0 \
+   org.openjdk.jmh.Main eu.exeris.kernel.community.transport.CommunityTransportFixedRateBenchmark.fixedRateStreamWrite \
+   -p scenario=h1-plaintext-fixed-rate -p backendMode=default-vt -p loadProfile=moderate \
+   -f 2 -wi 5 -i 8 -tu s
+
+# moderate, locality-aware
+java --enable-preview -cp "$(cat /tmp/exeris-community-jmh-cp.txt):exeris-kernel-community/target/test-classes" \
+   -XX:+UnlockExperimentalVMOptions -XX:+UseZGC -XX:ZCollectionInterval=0 \
+   org.openjdk.jmh.Main eu.exeris.kernel.community.transport.CommunityTransportFixedRateBenchmark.fixedRateStreamWrite \
+   -p scenario=h1-plaintext-fixed-rate -p backendMode=locality-aware -p loadProfile=moderate \
+   -f 2 -wi 5 -i 8 -tu s
+
+# max-throughput, default-vt
+java --enable-preview -cp "$(cat /tmp/exeris-community-jmh-cp.txt):exeris-kernel-community/target/test-classes" \
+   -XX:+UnlockExperimentalVMOptions -XX:+UseZGC -XX:ZCollectionInterval=0 \
+   org.openjdk.jmh.Main eu.exeris.kernel.community.transport.CommunityTransportFixedRateBenchmark.fixedRateStreamWrite \
+   -p scenario=h1-plaintext-fixed-rate -p backendMode=default-vt -p loadProfile=max-throughput \
+   -f 2 -wi 5 -i 8 -tu s
+
+# max-throughput, locality-aware
+java --enable-preview -cp "$(cat /tmp/exeris-community-jmh-cp.txt):exeris-kernel-community/target/test-classes" \
+   -XX:+UnlockExperimentalVMOptions -XX:+UseZGC -XX:ZCollectionInterval=0 \
+   org.openjdk.jmh.Main eu.exeris.kernel.community.transport.CommunityTransportFixedRateBenchmark.fixedRateStreamWrite \
+   -p scenario=h1-plaintext-fixed-rate -p backendMode=locality-aware -p loadProfile=max-throughput \
+   -f 2 -wi 5 -i 8 -tu s
+```
+
+**Notes:**
+- All runs use ZGC (sub-millisecond pauses) to isolate scheduler effects from GC.
+- Replace `exeris-kernel-community/target/test-classes` with actual path if test output directory differs.
+- Classpath file auto-generated by Maven; regenerate if dependencies change.
 
 ## Core/Community Validation Criteria
 
@@ -420,9 +521,16 @@ and locality penalties are often clearer below saturation than at full throughpu
 - [x] the benchmark harness is reproducible across repeated runs
 - [x] fixed-rate load exposes meaningful scheduler differences
 - [x] A/B comparison between baseline and affine prototype is possible
-- [ ] results are strong enough to justify Enterprise expansion
+- [x] results are strong enough to justify Enterprise expansion
 
-Validation blocker note (environment): full module test sweeps (`mvn -pl exeris-kernel-core test` and `mvn -pl exeris-kernel-community test`) currently fail at discovery stage with `UnsupportedClassVersionError` preview mismatch (class file `69.65535` vs runtime expecting `70.65535`). This is treated as an environment/toolchain blocker, not a seam contract failure.
+**Validation complete (2026-03-22):** Full module test sweeps pass on clean rebuild.
+
+- `exeris-kernel-core`: 914 tests, 0 failures, 0 errors, 10 skipped — BUILD SUCCESS
+- `exeris-kernel-community`: 616 tests, 0 failures, 0 errors, 6 skipped — BUILD SUCCESS
+- `CorePaqsSchedulerTckTest`: 9/9 pass (`PriorityDifferentiation` 4, `ScopedValuePropagation` 2, `CounterInvariants` 2, `ExecutionBackendSeamContract` 1)
+- `CommunityPaqsExecutionBackendContractTest`: 1/1 pass
+
+Toolchain note: prior `UnsupportedClassVersionError` (class `69.65535` / Java 25 preview) was caused by stale Java 25 JARs in `~/.m2`. Fixed by running `mvn -pl exeris-kernel-spi,exeris-kernel-tck,exeris-kernel-core -am clean install -DskipTests` before community test run. Workflow fix: always install dependency chain with `-am clean install -DskipTests` after clearing `/target`, rather than using `clean test` in isolation.
 
 ---
 
